	  typedef handling.
	- Added option '-c' to automatically create C typedef from SQL one.

Sun Apr 14 10:53:14 CEST 2002

	- Fixed one bug in structure handling resulting in using sizeof
	  indicator instead of variable.
	- Synced preproc.y with gram.y.

Mon Apr 22 20:44:56 CEST 2002
	
	- Synced preproc.y with gram.y.
	- Synced keywords.c.

Sun Apr 28 19:16:40 CEST 2002

	- Synced preproc.y with gram.y.
	- Fixed typo in comment printed by ecpg.

Sun May 19 19:21:34 CEST 2002

	- Fixed reduce/reduce conflict in parser.
	- Synced preproc.y with gram.y.
	- Synced pgc.l with scan.l.
	- Synced keywords.c.

Mon May 20 10:58:36 CEST 2002

	- Fixed some parser bugs.
	- Removed some simple rules to work arounf bison limit for now.
	- Update c_keywords.c to reflect changes in keywords.c.

Wed Jun 12 14:04:11 CEST 2002

	- Applied Lee Kindness' patch to fix one of memory allocation with
	  floating point numbers.
	
Mon Jun 17 15:23:51 CEST 2002

	- Fixed parser bug in pgc.l. Octal numbers in single quotes are now
	  correctly handled.

Tue Jun 18 15:13:15 CEST 2002

        - Fixed parser bug concerning foreign keys.
        - Synced preproc.y with gram.y.
        - Synced pgc.l with scan.l.
        - Synced keywords.c.
	
Sun Aug 18 16:09:06 CEST 2002

        - Synced preproc.y with gram.y.
        - Synced pgc.l with scan.l.
        - Synced keywords.c.

Tue Aug 20 14:13:34 CEST 2002

	- Removed ',' from preproc.y for bison 1.49b.

Sun Sep  1 11:13:04 CEST 2002

        - Synced preproc.y with gram.y.
        - Synced keywords.c.

Wed Sep 11 10:43:17 CEST 2002

	- Synced preproc.y with gram.y.


Fri Sep 20 07:57:42 CEST 2002

	- Synced preproc.y with gram.y.
	- Synced keywords.c.
	- Deactivated backend functions PREPARE, EXECUTE and DEALLOCATE for
	  the time being.

Thu Nov  7 10:34:07 CET 2002

	- Synced preproc.y with gram.y.
	- Set ecpg version to 2.10.0.
	- Set library version to 3.4.0.

Fri Nov 15 16:46:08 CET 2002

	- Synced preproc.y with gram.y.